[gd_scene load_steps=4 format=3 uid="uid://dt0f0bao4ofmf"]

[ext_resource type="Script" uid="uid://bxaj1ek6qppha" path="res://Mision_4/Scripts/main.gd" id="1_r150o"]
[ext_resource type="Texture2D" uid="uid://unqdd6qk18lc" path="res://Mision_3/Mision 3/assets/background.png" id="2_fs4k1"]
[ext_resource type="Texture2D" uid="uid://cf8l6frvtth45" path="res://Mision_3/Mision 3/assets/box.png" id="3_dygla"]

[node name="Main" type="Node2D"]
script = ExtResource("1_r150o")

[node name="Background" type="TextureRect" parent="."]
offset_right = 639.0
offset_bottom = 358.0
texture = ExtResource("2_fs4k1")
expand_mode = 1

[node name="Box" type="TextureRect" parent="."]
offset_left = 75.0
offset_top = 74.0
offset_right = 457.0
offset_bottom = 350.0
texture = ExtResource("3_dygla")
expand_mode = 1

[node name="Button" type="Button" parent="."]
offset_left = 518.0
offset_top = 7.0
offset_right = 622.0
offset_bottom = 38.0
text = "Reiniciar"

[node name="NodesContainer" type="Node2D" parent="."]
position = Vector2(59, -25)
scale = Vector2(0.7, 0.7)

[node name="EdgesContainer" type="Node2D" parent="."]
position = Vector2(59, -24)
scale = Vector2(0.7, 0.7)

[node name="MensajeFinal" type="Label" parent="."]
offset_left = 9.0
offset_top = 17.0
offset_right = 49.0
offset_bottom = 40.0

[node name="CheckButtonAuto" type="CheckButton" parent="."]
offset_left = 528.0
offset_top = 308.0
offset_right = 613.0
offset_bottom = 339.0
text = "Auto"

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="TiempoLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 459.0
offset_right = 112.0
offset_bottom = 484.0

[connection signal="toggled" from="CheckButtonAuto" to="." method="_on_button_auto_toggled"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
